@@ -793,7 +793,7 @@ do_page(dbref executor, const char *arg1, const char *arg2, dbref enactor,
   int fails_lock;
   int is_haven;
   ATTR *a;
-  char *alias;
+  char alias[BUFFER_LEN], *ap;
 
   tp2 = tbuf2 = (char *) mush_malloc(BUFFER_LEN, "page_buff");
   if (!tbuf2)
@@ -1013,11 +1013,16 @@ do_page(dbref executor, const char *arg1, const char *arg2, dbref enactor,
   tp = tbuf;
 
   /* Figure out the 'name' of the player */
-  if ((alias = shortalias(executor)) && *alias && PAGE_ALIASES
-      && strcasecmp(alias, Name(executor)))
-    current = tprintf("%s (%s)", Name(executor), alias);
-  else
+  if ((ap = shortalias(executor)) && *ap) {
+    strcpy(alias, ap);
+    if (PAGE_ALIASES && strcasecmp(ap, Name(executor)))
+      current = tprintf("%s (%s)", Name(executor), alias);
+    else
+      current = (char *) Name(executor);
+  } else {
+    alias[0] = '\0';
     current = (char *) Name(executor);
+  }
 
   /* Now, build the thing we want to send to the pagees,
    * and put it in tbuf */
@@ -1063,7 +1068,7 @@ do_page(dbref executor, const char *arg1, const char *arg2, dbref enactor,
   }
   if (!vmessageformat(executor, "OUTPAGEFORMAT", executor, 0, 5, message,
                       (key == 1) ? (*gap ? ":" : ";") : "\"",
-                      (alias && *alias) ? alias : "", tbuf2, tosend)) {
+                      (*alias) ? alias : "", tbuf2, tosend)) {
     notify(executor, tosend);
   }
   mush_free(tosend, "page_buff");
@@ -1080,7 +1085,7 @@ do_page(dbref executor, const char *arg1, const char *arg2, dbref enactor,
     }
     if (!vmessageformat(good[i], "PAGEFORMAT", executor, 0, 5, message,
                         (key == 1) ? (*gap ? ":" : ";") : "\"",
-                        (alias && *alias) ? alias : "", tbuf2, tbuf)) {
+                        (*alias) ? alias : "", tbuf2, tbuf)) {
       /* Player doesn't have Pageformat, or it eval'd to 0 */
       notify(good[i], tosend);
     }
